# Curso-FastAPI-Avancado-Projeto02

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: main.py
app/controllers/: category_controller.py  product_controller.py  user_controller.py
app/core/: auth.py  database.py  deps.py  security.py  settings.py
app/models/: __init__.py  category_model.py  product_model.py  user_model.py
app/routers/: category_routers.py  product_routers.py  user_routers.py
app/schemas/: category_schema.py  product_schema.py  responses.py  token_schema.py  user_schema.py
migrations/: env.py
migrations/versions/: cd4864018f5b_init.py  dc7ca3d1144d_init.py
tests/: conftest.py
tests/controllers/: test_category_controller.py  test_product_controller.py  test_user_controller.py
tests/routers/: test_category_routers.py  test_product_routers.py  test_user_routers.py
tests/schemas/: test_category_schemas .py  test_product_schemas.py  test_user_schemas .py
